--- a/css/estilo.css
+++ b/css/estilo.css
@@ -31,6 +31,11 @@ aside a:hover i{
     padding-right: 100px;
 }
 
+#modal-usuarios {
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
 #modal-categorias {
     padding-left: 100px;
     padding-right: 100px;
