--- a/modulos/login/estilo.css
+++ b/modulos/login/estilo.css
@@ -14,7 +14,7 @@ body{
 }
 
 .logo{
-    background-image: url("/img/MS-Logo.png");
+    background-image: url("../../img/MS-Logo.png");
     width: 95px;
     height: 90px;
     border-radius: 50%;
